--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "vue": "^3.4.21",
+    "vue-inline-svg": "^3.1.2",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
